--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -19,7 +19,15 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>testMovieMetadataOnWebHasCorrectMaturityRating</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>testMovieMetadataOnWebHasCorrectReleaseYear</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>testMovieMetadataOnWebHasCorrectMovieRatingScore</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
